# rrCnCXX

./: .gitignore  .gitmodules-update.cmd  CMakeLists.txt  LICENSE.txt  README.md  c.md  characters.md  cmake.md  codes.md  cxx.md  doxygen.md  git.md  grocs.md  ides.md  markdown.md  mfc.md  rst.md  tools.md  vim.md
ForCaseChange_rrBoost/: CMakeLists.txt
rrAvro/: AvroObjectAndFile_test.cc  CMakeLists.txt  README.md  RecordType.json  abc.cxx  objf.cxx  objs.cxx  schema.hh  schema.json  test.cxx  ygen.dox
rrAvro/avro/: DataStream.cxx  DataStream.hxx
rrAvro/schema/: RecordType.hxx
rrBoost/: CMakeLists.txt  README.md  algorithm_test.cpp  align_test.cpp  array_test.cpp  asio_test.cpp  asio_thread_pool_test.cpp  circular_buffer_test.cpp  config_test.cpp  core_test.cpp  date_time_test.cpp  dll_test.cpp  exception_test.cpp  filesystem_test.cpp  format_test.cpp  lexical_cast_test.cpp  locale_test.cpp  lockfree_test.cpp  log_test.cpp  mpl_test.cpp  parameter_test.cpp  predef_test.cpp  preprocessor_object_reflection_test.cpp  preprocessor_structure_field_reflection_test.cpp  preprocessor_test.cpp  process_test.cpp  program_options_test.cpp  property_tree_test.cpp  stacktrace_test.cpp  system_test.cpp  thread_test.cpp  type_traits.cpp  units_test.cpp  uuid_test.cpp  ygen.dox
rrBoost/args_gizmo/: appopts.cpp  appopts.hpp  main.cpp
rrBoost/prog_opts/: main.cxx
rrBoost/skts_gizmo/: CMakeLists.txt  application_options.cpp  application_options.hpp  appopts.cpp  appopts.hpp  main.cpp  tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp
rrBoost/test/: 1_assert_test.cpp  2_core_test.cpp  accumulators_test.cpp  any_test.cpp  asio_test.cpp  asio_thread_pool_test.cpp  assign_test.cpp  atomic_test.cpp  circular_buffer_test.cpp  coroutine_test.cpp  date_time_test.cpp  dll_test.cpp  exception_test.cpp  format_test.cpp  interprocess_test.cpp  lexical_cast_test.cpp  lockfree_test.cpp  log_test.cpp  parameter_test.cpp  preprocessor_self_iteration.hpp  process_test.cpp  property_tree_test.cpp  stacktrace_test.cpp  system_test.cpp  thread_test.cpp  uuid_test.cpp
rrC/: CMakeLists.txt  README.md  api.h  api_macros.h  c_std_ver.h  c_versions.h  cdef.h  cfg.h.in  config.h.in  cstdver.h  cver.h  def.h  exe.c  lib.c  lib.h  project.h.in  rrC.dox  rrcapi.h  rrclib.c  rrclib.h  std.h  ygen.dox
rrC/algo/: algo.c  bsrch_test.c  qsort_test.c  tcase_algo.c  tcase_bsrch.c  tcase_qsort.c  tsuite_algo.c  tsuite_algo.h  ygen.dox
rrC/algorithm/: _test.c  tc_algorithm.c  ts_algorithm.h
rrC/algorithms/: _test.h  algorithms_test.c  qsort_test.c  ygen.dox
rrC/algos/: ygen.dox
rrC/atom/: atom.c  atom_test.c  tcase_atom.c  test.h  tsuite_atom.c  tsuite_atom.h  ygen.dox
rrC/atomic/: _test.c  _test.h  tc_atomic.c  ts_atomic.h
rrC/atomic_operations/: _test.h  atomic_operations_test.c
rrC/chrono/: _test.c  tc_chrono.c  ts_chrono.h
rrC/date_and_time_utilities/: _test.h  caltm_test.c  clktm_test.c  date_and_time_utilities_test.c  spectm_test.c  ygen.dox
rrC/dynamic_memory_management/: _test.h  dynamic_memory_management_test.c
rrC/err/: ygen.dox
rrC/error/: tc_error.c  ts_error.h
rrC/input_output_support/: _test.h  file_access_test.c  ygen.dox
rrC/io/: _test.h  (+20 more)
rrCXX/: CMakeLists.txt  README.md  api.h  api.hxx  api_macros.hxx  cfg.hxx.in  config.hxx.in  cxx_std_ver.hxx  cxx_versions.hxx  cxxdef.hxx  cxxver.hxx  exe.cxx  lib.cxx  lib.h  lib.hxx  pakua.hxx  project.hxx.in  rrCXX.dox  rrcxxlib.cxx  rrcxxlib.hxx  std.hxx  ygen.dox  卦.hxx
rrCeph/: CMakeLists.txt  README.md  s3_test.cxx
rrDLL/: CMakeLists.txt  README.md  apiaux.h
rrDirectX/: CMakeLists.txt
rrFFmpeg/: CMakeLists.txt  CMakelists.txt  README.md  gfs.cxx  ygen.dox
rrICE/: CMakeLists.txt  README.md  client.cxx  hello_client.cxx  hello_server.cxx  server.cxx  ygen.dox
rrICErn/: CMakeLists.txt
rrIce/: CMakeLists.txt  README.md  Service.ice  ServiceImpl.cpp  ServiceImpl.h  test.cpp
rrJRTPLIB/: CMakeLists.txt  test.cpp
rrKafka/: CMakeLists.txt  README.md  test.cxx  ygen.dox
rrLinux/: CMakeLists.txt
rrLua/: CMakeLists.txt  README.md  tcase.c  test.cxx  tmain.c  tsuite.c  tsuite.h  ygen.dox
rrOpenCV/: CMakeLists.txt  OpenCV.dox  README.md  ygen.dox
rrOpenGL/: CMakeLists.txt  README.md
rrPOSIX/: CMakeLists.txt  README.md  getip.cxx  tc_berkeley_sockets.c  tc_posix_threads.c  tm.c  ts.h  ygen.dox
rrQt/: CMakeLists.txt  README.md  conapp.cxx  console_app.cpp  gt_main.cpp  main.cpp  qckapp.cpp  quick_app.qml  wgtapp.cpp  wgtapp.cxx  widgets_app.cpp  ygen.dox
rrRedis/: CMakeLists.txt  README.md  tc.c  tc_hash.c  tc_key.c  tc_list.c  tc_string.c  tm.c  ts.h  ygen.dox
rrSQLite/: CMakeLists.txt  README.md  _test.c  _test.h  constraint_test.cxx  database_test.c  database_test.cxx  inner_join_test.sql  limit_test.sql  row_test.c  row_test.cxx  table_test.c  table_test.cxx  tc_database.c  tc_row.c  tc_table.c  tcase.c  tmain.c  transaction_test.cxx  ts.h  tsuite.h  ygen.dox
rrSWIG/: CMakeLists.txt  README.md
rrWebSocketPP/: CMakeLists.txt  README.md  client.cpp  client.hpp  debug_client.cpp  debug_server.cpp  server.cpp  server.hpp  test.cpp  ygen.dox
rrWindows/: .gitignore  App-Main.c  App-WinMain.c  CMakeLists.txt  ConsoleApp.c  ConsoleApplication.c  DesktopApp.c  DesktopAppTechs.c  DesktopApplication.c  Diag-Debug-Error.c  Diag-Debug-Error.h  Diag-Debug.c  Diag.c  Dice.c  DiceLib.c  DiceLib.h  DiceLibrary.c  DiceLibrary.h  Error.c  Error.h  FileAttribute.c  FindFile.c  HelloMsg.c  HelloWorld.c  InitializationFile.c  Net-Sock-TcpClient.c  Net-Sock-TcpClt.c  Net-Sock-TcpServer.c  Net-Sock-TcpSvr.c  Net-Sock-UdpClient.c  Net-Sock-UdpClt.c  Net-Sock-UdpServer.c  Net-Sock-UdpSvr.c  Net-Sock.c  Net.c  Peon.c  README.md  Sto-Local-File-Attr.c  Sto-Local-File-Attributes.c  Sto-Local-File-Find.c  (+40 more)
rrZooKeeper/: CMakeLists.txt  README.md  async_crud_test.c  eph_seq_test.c  sync_crud_test.c  sync_test.cxx  tc_async_crud.c  tc_sync_crud.c  test.c  tm.c  ts.h  watch_test.c  ygen.dox
rrZookeeper/: CMakeLists.txt
rrcexe/: CMakeLists.txt
rrcurl/: CMakeLists.txt  README.md  tc.c  test.cxx  tm.c  ts.h  ygen.dox
(+2884 files in other folders)
